--- a/toppers.html
+++ b/toppers.html
@@ -1,184 +1,291 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Annual Examination Class Topper Certificate</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Class Topper Certificate Generator — Noorussalam Madrasa</title>
 
-<style>
-    body {
-        font-family: 'Poppins', sans-serif;
-        background: #eef3ff;
-        margin: 0;
-        padding: 0;
-        text-align: center;
+  <!-- Fonts & icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Amiri&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+  <!-- Confetti -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <!-- jsPDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  <style>
+    :root{
+      --accent:#0d6efd;
+      --gold:#ffd700;
+      --card-radius:14px;
+      --max-width:1100px;
+      --bg1:#eef9ff;
     }
-
-    .container {
-        max-width: 900px;
-        margin: 20px auto;
-        background: white;
-        padding: 25px;
-        border-radius: 15px;
-        box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    body{
+      margin:0;
+      font-family:"Poppins",sans-serif;
+      background:var(--bg1);
+      color:#073045;
+      padding:20px;
     }
+    .wrap{max-width:1100px;margin:0 auto 60px;}
+    header{text-align:center;margin-bottom:14px}
+    header h1{color:#073045;margin:6px 0;font-size:28px;font-weight:700}
+    header p{margin:0;color:#0b3b50;opacity:.85}
 
-    h1 {
-        margin: 0;
-        font-size: 32px;
-        font-weight: 700;
-        color: #1a237e;
+    .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:18px}
+    @media(max-width:820px){ .grid{grid-template-columns:1fr} }
+
+    .card{
+      background:#fff;border-radius:var(--card-radius);padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);
+      border:2px solid rgba(255,215,0,0.25);
     }
+    .medal{ width:56px;height:56px;border-radius:50%;background:var(--gold);display:flex;align-items:center;justify-content:center;font-weight:900;color:#000;margin:6px auto;font-size:20px }
+    .photo{ width:110px;height:110px;border-radius:50%;overflow:hidden;margin:10px auto;border:3px solid var(--accent);background:#f6fbff }
+    .photo img{ width:100%;height:100%;object-fit:cover;display:block }
+    .photo-upload{ display:block;margin:8px auto; }
+    .name{ text-align:center;font-weight:700;margin-top:6px }
+    .meta{ text-align:center;color:#0a3b45;font-weight:600;margin-top:6px }
+    .btns{ display:flex;gap:8px;justify-content:center;margin-top:10px;flex-wrap:wrap }
+    .btn{ padding:9px 12px;border-radius:10px;border:none;cursor:pointer;font-weight:700 }
+    .btn-png{ background:var(--gold); color:#000 }
+    .btn-pdf{ background:#0d6efd;color:#fff }
+    .btn-print{ background:#10b981;color:#032 }
+    .controls{ display:flex;gap:8px;align-items:center;justify-content:center;margin:14px 0 }
+    .small{ font-size:13px;color:#445; }
+    footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
 
-    h2 {
-        color: #3949ab;
-        margin: 5px 0 20px 0;
-        font-size: 22px;
-        font-weight: 600;
-    }
-
-    .certificate {
-        width: 100%;
-        border: 4px solid #1a237e;
-        padding: 20px;
-        border-radius: 20px;
-        position: relative;
-        background: linear-gradient(#ffffff, #f3f6ff);
-    }
-
-    .topper-photo {
-        width: 160px;
-        height: 160px;
-        border-radius: 100%;
-        border: 5px solid #1a237e;
-        object-fit: cover;
-        margin-top: 15px;
-    }
-
-    .student-name {
-        font-size: 30px;
-        font-weight: bold;
-        color: #0d47a1;
-        margin-top: 15px;
-    }
-
-    .class-text {
-        font-size: 20px;
-        color: #37474f;
-        margin-bottom: 15px;
-    }
-
-    .sign-box {
-        margin-top: 40px;
-        text-align: right;
-        padding-right: 40px;
-    }
-
-    .sign-box img {
-        width: 180px;
-        height: auto;
-    }
-
-    .principal {
-        font-size: 18px;
-        font-weight: 600;
-        color: #000;
-        margin-top: -10px;
-        padding-right: 55px;
-    }
-
-    #confetti-canvas {
-        position: fixed;
-        top: 0;
-        left: 0;
-        pointer-events: none;
-    }
-
-    .download-btn {
-        margin-top: 20px;
-        background: #1a237e;
-        color: white;
-        padding: 12px 25px;
-        border: none;
-        border-radius: 8px;
-        font-size: 18px;
-        cursor: pointer;
-    }
-</style>
-
+    .reset-btn{ background:#ef4444;color:#fff;padding:8px 12px;border-radius:8px;border:none }
+  </style>
 </head>
 <body>
+  <div class="wrap">
+    <header>
+      <h1>NOORUSSALAM MADRASA</h1>
+      <p class="small">Annual Examination — Class Topper • Upload photo & generate certificate</p>
+    </header>
 
-<canvas id="confetti-canvas"></canvas>
-
-<div class="container">
-    <h1>NOORUSSALAM MADRASA</h1>
-    <h2>KAMBIPPALAM – KERALA ESTATE</h2>
-    <h2>ANNUAL EXAMINATION – CLASS TOPPER</h2>
-
-    <input type="file" id="photoInput" accept="image/*" style="margin-bottom:15px"><br>
-
-    <div id="certificate" class="certificate">
-        <h2 style="font-size:26px; color:#1a237e;">Certificate of Excellence</h2>
-
-        <img id="previewPhoto" class="topper-photo" src="" alt="">
-
-        <div class="student-name" id="studentName">Student Name</div>
-        <div class="class-text" id="studentClass">Class: ___</div>
-
-        <div class="sign-box">
-            <img src="https://i.ibb.co/HfzzG1TN/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png" alt="Signature">
-            <div class="principal">Principal</div>
-        </div>
+    <div class="controls">
+      <label class="small"><strong>Certificate Background Loaded from Online Server</strong></label>
+      <button class="reset-btn" id="resetAll">Reset All Saved Photos</button>
     </div>
 
-    <input type="text" id="nameInput" placeholder="Enter Student Name" style="padding:10px; margin-top:20px;">
-    <input type="text" id="classInput" placeholder="Enter Class" style="padding:10px;">
-    <br>
+    <div id="grid" class="grid" aria-live="polite"></div>
 
-    <button class="download-btn" onclick="generateCertificate()">Generate & Download</button>
-</div>
-
-<!-- html2canvas -->
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-
-<!-- Confetti -->
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <footer>© Noorussalam Madrasa — Auto-date added to certificate</footer>
+  </div>
 
 <script>
-document.getElementById("photoInput").addEventListener("change", function(event) {
-    const file = event.target.files[0];
-    const reader = new FileReader();
-    reader.onload = function(e) {
-        document.getElementById("previewPhoto").src = e.target.result;
-    };
-    reader.readAsDataURL(file);
+/* -------------------------------------------------
+   ✔ FIXED SETTINGS
+--------------------------------------------------- */
+
+/* Background → Using ONLINE LINK (100% working) */
+const CERT_BG = "https://i.ibb.co/Fb5bkwrK/CERTIFICATR.jpg";
+
+/* Signature → Your provided signature URL */
+const SIG_SRC  = "https://i.ibb.co/HfzzG1TN/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png";
+
+/* -------------------------------------------------
+   Class toppers list (edit anytime)
+--------------------------------------------------- */
+const toppers = [
+  { class: "1", name: "Ayesha Rahman", mark: "498 / 500" },
+  { class: "2", name: "Muhammed Shahid", mark: "493 / 500" },
+  { class: "3", name: "Nimra Sameer", mark: "487 / 500" },
+  { class: "4", name: "Faris P", mark: "489 / 500" },
+  { class: "5", name: "Shamil N", mark: "491 / 500" },
+  { class: "6", name: "Hana M", mark: "480 / 500" },
+  { class: "7", name: "Riyas M", mark: "485 / 500" },
+  { class: "8", name: "Zainab K", mark: "492 / 500" },
+  { class: "9", name: "Yusuf T", mark: "488 / 500" },
+  { class: "10", name: "Saniya F", mark: "495 / 500" }
+];
+
+/* -------------------------------------------------
+   Do NOT change below unless needed
+--------------------------------------------------- */
+
+const uploadedPhotos = Array(toppers.length).fill(null);
+
+/* load saved photos */
+for(let i=0;i<toppers.length;i++){
+  const saved = localStorage.getItem(`topperPhoto_${i}`);
+  if(saved) uploadedPhotos[i] = saved;
+}
+
+function escapeHtml(s){
+  return String(s||"").replace(/[&<>"']/g, m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+}
+function jsLit(s){
+  if(s===undefined||s===null) return "''";
+  return "'" + String(s).replace(/\\/g,'\\\\').replace(/'/g,"\\'").replace(/\n/g,'\\n') + "'";
+}
+
+function placeholderDataURL(){
+  const svg = '<svg xmlns="http://www.w3.org/2000/svg" width="400" height="400"><rect width="100%" height="100%" fill="#eef9ff"/><circle cx="200" cy="150" r="90" fill="#cfeeff"/></svg>';
+  return 'data:image/svg+xml;utf8,' + encodeURIComponent(svg);
+}
+
+/* build UI */
+const grid = document.getElementById('grid');
+toppers.forEach((t,i) => {
+  const photoURL = uploadedPhotos[i] || placeholderDataURL();
+  const card = document.createElement('div');
+  card.className = 'card';
+  card.innerHTML = `
+    <div class="medal">${i+1}</div>
+    <div class="photo"><img src="${photoURL}" alt="${escapeHtml(t.name)}"></div>
+    <input type="file" accept="image/*" class="photo-upload" onchange="handlePhotoUpload(this, ${i})">
+
+    <div class="name">${escapeHtml(t.name)}</div>
+    <div class="meta">Class ${escapeHtml(t.class)} • ${escapeHtml(t.mark)}</div>
+
+    <div class="btns">
+      <button class="btn btn-png" onclick="generatePNG('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}] || '${photoURL}')"><i class="fa fa-file-image"></i> PNG</button>
+      <button class="btn btn-pdf" onclick="generatePDF('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}] || '${photoURL}')"><i class="fa fa-file-pdf"></i> PDF</button>
+      <button class="btn btn-print" onclick="generatePrint('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}] || '${photoURL}')"><i class="fa fa-print"></i> Print</button>
+    </div>
+  `;
+  grid.appendChild(card);
 });
 
-function generateCertificate() {
-
-    // Insert name & class
-    document.getElementById("studentName").textContent =
-        document.getElementById("nameInput").value;
-
-    document.getElementById("studentClass").textContent =
-        "Class: " + document.getElementById("classInput").value;
-
-    // Confetti
-    confetti({
-        particleCount: 250,
-        spread: 80,
-        origin: { y: 0.2 }
-    });
-
-    // Screenshot & download
-    html2canvas(document.getElementById("certificate")).then(canvas => {
-        const link = document.createElement("a");
-        link.download = "Topper_Certificate.png";
-        link.href = canvas.toDataURL("image/png");
-        link.click();
-    });
+/* handle uploads */
+function handlePhotoUpload(input,index){
+  const file = input.files[0];
+  if(!file) return;
+  const reader = new FileReader();
+  reader.onload = function(e){
+    uploadedPhotos[index] = e.target.result;
+    localStorage.setItem(`topperPhoto_${index}`, e.target.result);
+    input.closest('.card').querySelector('img').src = e.target.result;
+  };
+  reader.readAsDataURL(file);
 }
+
+/* reset all */
+document.getElementById('resetAll').onclick = ()=>{
+  if(!confirm("Clear all photos?")) return;
+  for(let i=0;i<toppers.length;i++){
+    localStorage.removeItem(`topperPhoto_${i}`);
+    uploadedPhotos[i] = null;
+  }
+  location.reload();
+};
+
+/* load any image */
+function loadImage(src){
+  return new Promise((res,rej)=>{
+    const img = new Image();
+    img.crossOrigin = "anonymous";
+    img.onload = ()=>res(img);
+    img.onerror = ()=>rej();
+    img.src = src;
+  });
+}
+
+/* -------------------------------------------------
+   RENDER CERTIFICATE CANVAS
+   (Certificate of Excellence removed)
+--------------------------------------------------- */
+async function renderCertificateCanvas(name,cls,mark,photoURL){
+  const w = 1125, h = 1500;
+  const canvas = document.createElement("canvas");
+  canvas.width = w; canvas.height = h;
+  const ctx = canvas.getContext("2d");
+
+  /* Background */
+  const bg = await loadImage(CERT_BG);
+  ctx.drawImage(bg,0,0,w,h);
+
+  /* Photo circle */
+  const cx = w/2, cy = 380, r = 210;
+
+  if(photoURL){
+    const img = await loadImage(photoURL);
+    const temp = document.createElement("canvas");
+    temp.width = r*2; temp.height = r*2;
+    const tctx = temp.getContext("2d");
+
+    const scale = Math.max(temp.width/img.width, temp.height/img.height);
+    const sw = img.width * scale, sh = img.height * scale;
+    tctx.drawImage(img, (temp.width-sw)/2, (temp.height-sh)/2, sw, sh);
+
+    ctx.save();
+    ctx.beginPath(); ctx.arc(cx,cy,r,0,Math.PI*2); ctx.clip();
+    ctx.drawImage(temp, cx-r, cy-r);
+    ctx.restore();
+  }
+
+  /* Gold ring */
+  ctx.beginPath(); ctx.arc(cx,cy,r+12,0,Math.PI*2);
+  ctx.strokeStyle="#ffd700"; ctx.lineWidth=18; ctx.stroke();
+
+  /* ONLY NAME, CLASS, MARKS */
+  ctx.fillStyle="#073045";
+  ctx.textAlign="center";
+
+  ctx.font="bold 60px Poppins";
+  ctx.fillText(name, w/2, cy+r+120);
+
+  ctx.font="32px Poppins";
+  ctx.fillText(`Class: ${cls} | Marks: ${mark}`, w/2, cy+r+180);
+
+  /* Auto Date */
+  const d = new Date();
+  const dstr = d.toLocaleDateString("en-IN",{day:"numeric",month:"long",year:"numeric"});
+  ctx.textAlign="left";
+  ctx.font="26px Poppins";
+  ctx.fillText(dstr, 80, h-140);
+
+  /* Signature */
+  const sig = await loadImage(SIG_SRC);
+  const sw = 380;
+  const sh = sig.height * (sw/sig.width);
+  ctx.drawImage(sig, w-100-sw, h-260-sh, sw, sh);
+
+  return canvas;
+}
+
+/* -------------------------------------------------
+   PNG DOWNLOAD
+--------------------------------------------------- */
+async function generatePNG(name,cls,mark,photo){
+  const c = await renderCertificateCanvas(name,cls,mark,photo);
+  const a = document.createElement("a");
+  a.href = c.toDataURL("image/png");
+  a.download = `${name.replace(/\s+/g,'_')}.png`;
+  a.click();
+  confetti();
+}
+
+/* -------------------------------------------------
+   PDF DOWNLOAD
+--------------------------------------------------- */
+async function generatePDF(name,cls,mark,photo){
+  const c = await renderCertificateCanvas(name,cls,mark,photo);
+  const img = c.toDataURL("image/png");
+  const { jsPDF } = window.jspdf;
+  const pdf = new jsPDF({orientation:"portrait",unit:"px",format:[1125,1500]});
+  pdf.addImage(img,"PNG",0,0,1125,1500);
+  pdf.save(`${name.replace(/\s+/g,'_')}.pdf`);
+  confetti();
+}
+
+/* -------------------------------------------------
+   PRINT
+--------------------------------------------------- */
+async function generatePrint(name,cls,mark,photo){
+  const c = await renderCertificateCanvas(name,cls,mark,photo);
+  const img = c.toDataURL("image/png");
+  const w = window.open("");
+  w.document.write(`<img src="${img}" style="width:100%">`);
+  w.document.close();
+  setTimeout(()=>w.print(),600);
+  confetti();
+}
+
 </script>
 
 </body>
