--- a/toppers.html
+++ b/toppers.html
@@ -85,7 +85,6 @@ footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
 
   <div class="controls">
     <label class="small"><strong>Certificate Background Loaded from Online Server</strong></label>
-    <button class="reset-btn" id="resetAll">Reset All Saved Photos</button>
   </div>
 
   <div id="grid" class="grid" aria-live="polite"></div>
@@ -100,8 +99,8 @@ footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
 </div>
 
 <script>
-const CERT_BG = "https://i.ibb.co/Fb5bkwrK/CERTIFICATR.jpg";
-const SIG_SRC  = "https://i.ibb.co/HfzzG1TN/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png";
+const CERT_BG = "https://i.ibb.co/DfHWdhtC/TOPPER.jpg";
+const SIG_SRC  = "";
 
 const toppers = [
   { class: "1", name: "Ayesha Rahman", mark: "498 / 500" },
