--- a/toppers.html
+++ b/toppers.html
@@ -40,18 +40,10 @@ header p{margin:0;color:#0b3b50;opacity:.85}
 .card{
   background:#fff;border-radius:var(--card-radius);padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);
   border:2px solid rgba(255,215,0,0.25);position:relative;
-  overflow:hidden;
 }
 .medal{
   width:56px;height:56px;border-radius:50%;background:var(--gold);display:flex;align-items:center;justify-content:center;font-weight:900;color:#000;margin:6px auto;font-size:20px;
-  animation: shine 1.5s infinite alternate;
 }
-@keyframes shine {
-  0%{ transform: scale(1) rotate(0deg); box-shadow:0 0 4px #ffd700; }
-  50%{ transform: scale(1.1) rotate(10deg); box-shadow:0 0 12px #ffd700; }
-  100%{ transform: scale(1) rotate(-5deg); box-shadow:0 0 6px #ffd700; }
-}
-
 .photo{ width:110px;height:110px;border-radius:50%;overflow:hidden;margin:10px auto;border:3px solid var(--accent);background:#f6fbff }
 .photo img{ width:100%;height:100%;object-fit:cover;display:block }
 .photo-upload{ display:block;margin:8px auto; }
@@ -99,8 +91,11 @@ footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
 </div>
 
 <script>
+/* ---------------------------
+   SETTINGS
+---------------------------- */
 const CERT_BG = "https://i.ibb.co/DfHWdhtC/TOPPER.jpg";
-const SIG_SRC  = "";
+const SIG_SRC  = ""; // Add signature if needed
 
 const toppers = [
   { class: "1", name: "Ayesha Rahman", mark: "498 / 500" },
@@ -127,6 +122,23 @@ function placeholderDataURL(){
   return 'data:image/svg+xml;utf8,'+encodeURIComponent(svg);
 }
 
+/* ---------------------------
+   FLOATING MEDAL SETTINGS
+---------------------------- */
+let floatOffset = 0;
+let floatDirection = 1;
+const floatRange = 8; // max pixels up/down
+
+function animateMedals(){
+  floatOffset += 0.5*floatDirection;
+  if(floatOffset>floatRange || floatOffset<-floatRange) floatDirection*=-1;
+  requestAnimationFrame(animateMedals);
+}
+animateMedals();
+
+/* ---------------------------
+   BUILD GRID
+---------------------------- */
 const grid=document.getElementById('grid');
 toppers.forEach((t,i)=>{
   const photoURL=uploadedPhotos[i]||placeholderDataURL();
@@ -147,6 +159,9 @@ toppers.forEach((t,i)=>{
   grid.appendChild(card);
 });
 
+/* ---------------------------
+   PHOTO UPLOAD HANDLER
+---------------------------- */
 function handlePhotoUpload(input,index){
   const file=input.files[0]; if(!file) return;
   const reader=new FileReader();
@@ -158,105 +173,95 @@ function handlePhotoUpload(input,index){
   reader.readAsDataURL(file);
 }
 
-document.getElementById('resetAll').onclick=()=>{
-  if(!confirm("Clear all photos?")) return;
-  for(let i=0;i<toppers.length;i++){
-    localStorage.removeItem(`topperPhoto_${i}`);
-    uploadedPhotos[i]=null;
-  }
-  location.reload();
-};
-
+/* ---------------------------
+   LOAD IMAGE UTILITY
+---------------------------- */
 function loadImage(src){ return new Promise((res,rej)=>{ const img=new Image(); img.crossOrigin="anonymous"; img.onload=()=>res(img); img.onerror=()=>rej(); img.src=src; }); }
 
-function getGradient(ctx, cx, cy, r, index){
-  const colors=[
-    ["#ff9a9e","#fad0c4"],["#a18cd1","#fbc2eb"],["#fad0c4","#ffd1ff"],["#ffecd2","#fcb69f"],
-    ["#ffdde1","#ee9ca7"],["#cfd9df","#e2ebf0"],["#fbc2eb","#a6c1ee"],["#89f7fe","#66a6ff"],
-    ["#fdfbfb","#ebedee"],["#a1c4fd","#c2e9fb"]
-  ];
-  const grad = ctx.createRadialGradient(cx, cy, r*0.3, cx, cy, r*1.1);
-  grad.addColorStop(0, colors[index%colors.length][0]);
-  grad.addColorStop(1, colors[index%colors.length][1]);
-  return grad;
-}
-
-async function renderCertificateCanvas(name,cls,mark,photoURL,index){
-  const w=1125,h=1500,canvas=document.createElement("canvas");
+/* ---------------------------
+   RENDER CERTIFICATE
+---------------------------- */
+async function renderCertificateCanvas(name,cls,mark,photo,index){
+  const w=1125,h=1500;
+  const canvas=document.createElement("canvas");
   canvas.width=w; canvas.height=h;
   const ctx=canvas.getContext("2d");
 
   const bg=await loadImage(CERT_BG);
   ctx.drawImage(bg,0,0,w,h);
 
-  const centerX=w/2, centerY=h/2;
-  const r=210;
+  const cx=w/2, cy=h/2, r=210;
 
-  // Gradient behind photo
-  ctx.beginPath();
-  ctx.arc(centerX,centerY,r*1.1,0,Math.PI*2);
-  ctx.fillStyle=getGradient(ctx,centerX,centerY,r,index);
-  ctx.fill();
+  // Photo halo
+  ctx.beginPath(); ctx.arc(cx,cy,r*1.1,0,2*Math.PI);
+  ctx.fillStyle="rgba(255,223,0,0.2)"; ctx.fill();
 
-  // Draw photo
-  if(photoURL){
-    const img=await loadImage(photoURL);
+  // Photo
+  if(photo){
+    const img=await loadImage(photo);
     const temp=document.createElement("canvas");
     temp.width=r*2; temp.height=r*2;
     const tctx=temp.getContext("2d");
     const scale=Math.max(temp.width/img.width,temp.height/img.height);
     tctx.drawImage(img,(temp.width-img.width*scale)/2,(temp.height-img.height*scale)/2,img.width*scale,img.height*scale);
     ctx.save();
-    ctx.beginPath(); ctx.arc(centerX,centerY,r,0,Math.PI*2); ctx.clip();
-    ctx.drawImage(temp,centerX-r,centerY-r);
-    ctx.restore();
+    ctx.beginPath(); ctx.arc(cx,cy,r,0,2*Math.PI); ctx.clip();
+    ctx.drawImage(temp,cx-r,cy-r); ctx.restore();
   }
 
-  // Medal above photo
-  const medalRadius=56;
-  ctx.beginPath();
-  ctx.arc(centerX,centerY-r-40,medalRadius/2,0,Math.PI*2);
+  // Floating medal
+  const medalR=56;
+  ctx.beginPath(); ctx.arc(cx, cy-r-40-floatOffset, medalR/2, 0, 2*Math.PI);
   ctx.fillStyle="#ffd700"; ctx.fill();
   ctx.fillStyle="#000"; ctx.font="bold 28px sans-serif"; ctx.textAlign="center";
-  ctx.fillText(`${index+1}`,centerX,centerY-r-35);
+  ctx.fillText(`${index+1}`, cx, cy-r-35-floatOffset);
 
   // Photo ring
-  ctx.beginPath(); ctx.arc(centerX,centerY,r+12,0,Math.PI*2);
+  ctx.beginPath(); ctx.arc(cx,cy,r+12,0,2*Math.PI);
   ctx.strokeStyle="#ffd700"; ctx.lineWidth=18; ctx.stroke();
 
-  // Name & class/marks below photo
+  // Name & class/marks
   ctx.fillStyle="#073045"; ctx.textAlign="center";
-  ctx.font="bold 60px sans-serif"; ctx.fillText(name,centerX,centerY+r+80);
-  ctx.font="32px sans-serif"; ctx.fillText(`Class: ${cls} | Marks: ${mark}`,centerX,centerY+r+140);
+  ctx.font="bold 60px sans-serif"; ctx.fillText(name,cx,cy+r+80);
+  ctx.font="32px sans-serif"; ctx.fillText(`Class: ${cls} | Marks: ${mark}`,cx,cy+r+140);
 
-  // Date bottom left
-  const d=new Date();
-  const dstr=d.toLocaleDateString("en-IN",{day:"numeric",month:"long",year:"numeric"});
-  ctx.textAlign="left"; ctx.font="26px sans-serif"; ctx.fillText(dstr,80,h-140);
-
-  // Signature bottom right
-  const sig=await loadImage(SIG_SRC); const sw=380; const sh=sig.height*(sw/sig.width);
-  ctx.drawImage(sig,w-100-sw,h-260-sh,sw,sh);
+  // Date
+  const d=new Date(); ctx.textAlign="left"; ctx.font="26px sans-serif";
+  ctx.fillText(d.toLocaleDateString("en-IN",{day:"numeric",month:"long",year:"numeric"}),80,h-140);
 
   return canvas;
 }
 
-/* Preview modal */
+/* ---------------------------
+   PREVIEW / DOWNLOAD / PRINT
+---------------------------- */
 async function previewCertificate(name,cls,mark,photo,type,index){
-  const c=await renderCertificateCanvas(name,cls,mark,photo,index);
-  const img=c.toDataURL("image/png");
-  const modal=document.getElementById("previewModal");
-  const previewImg=document.getElementById("previewImage");
-  previewImg.src=img; modal.style.display="flex";
+  const c = await renderCertificateCanvas(name,cls,mark,photo,index);
+  const img = c.toDataURL("image/png");
+  const modal = document.getElementById('previewModal');
+  const previewImg = document.getElementById('previewImage');
+  previewImg.src = img; modal.style.display="flex";
 
-  previewImg.onclick=()=>{
-    if(type==="png"){ const a=document.createElement("a"); a.href=img; a.download=`${name.replace(/\s+/g,'_')}.png`; a.click(); confetti(); }
-    else if(type==="pdf"){ const { jsPDF } = window.jspdf; const pdf=new jsPDF({orientation:"portrait",unit:"px",format:[1125,1500]}); pdf.addImage(img,"PNG",0,0,1125,1500); pdf.save(`${name.replace(/\s+/g,'_')}.pdf`); confetti(); }
-    else if(type==="print"){ const w=window.open(""); w.document.write(`<img src="${img}" style="width:100%">`); w.document.close(); setTimeout(()=>w.print(),500); confetti(); }
+  previewImg.onclick = () => {
+    if(type==="png"){ 
+      const a=document.createElement("a"); a.href=img; a.download=`${name.replace(/\s+/g,'_')}.png`; a.click(); confetti();
+    }
+    else if(type==="pdf"){ 
+      const { jsPDF } = window.jspdf; 
+      const pdf=new jsPDF({orientation:"portrait",unit:"px",format:[1125,1500]});
+      pdf.addImage(img,"PNG",0,0,1125,1500); pdf.save(`${name.replace(/\s+/g,'_')}.pdf`); confetti();
+    }
+    else if(type==="print"){ 
+      const w=window.open(""); w.document.write(`<img src="${img}" style="width:100%">`); w.document.close(); 
+      setTimeout(()=>w.print(),500); confetti();
+    }
   }
 }
 
-function closePreview(){ document.getElementById("previewModal").style.display="none"; }
+/* ---------------------------
+   MODAL CLOSE
+---------------------------- */
+function closePreview(){ document.getElementById('previewModal').style.display="none"; }
 </script>
 </body>
 </html>
