--- a/toppers.html
+++ b/toppers.html
@@ -5,100 +5,58 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Class Topper Certificate Generator — Noorussalam Madrasa</title>
 
-<!-- Fonts & icons -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Amiri&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-<!-- Confetti -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-<!-- jsPDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
-:root{
-  --accent:#0d6efd;
-  --gold:#ffd700;
-  --card-radius:14px;
-  --bg1:#eef9ff;
-}
-body{
-  margin:0;
-  font-family:"Poppins",sans-serif;
-  background:var(--bg1);
-  color:#073045;
-  padding:20px;
-}
+body{margin:0;font-family:"Poppins",sans-serif;background:#eef9ff;color:#073045;padding:20px;}
 .wrap{max-width:1100px;margin:0 auto 60px;}
-header{text-align:center;margin-bottom:14px}
-header h1{color:#073045;margin:6px 0;font-size:28px;font-weight:700}
-header p{margin:0;color:#0b3b50;opacity:.85}
-
-.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:18px}
+header{text-align:center;margin-bottom:14px;}
+header h1{color:#073045;margin:6px 0;font-size:28px;font-weight:700;}
+header p{margin:0;color:#0b3b50;opacity:.85;}
+.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:18px;}
 @media(max-width:820px){ .grid{grid-template-columns:1fr} }
-
-.card{
-  background:#fff;border-radius:var(--card-radius);padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);
-  border:2px solid rgba(255,215,0,0.25);position:relative;
-  overflow:hidden;
-}
-.medal{
-  width:56px;height:56px;border-radius:50%;background:var(--gold);display:flex;align-items:center;justify-content:center;font-weight:900;color:#000;margin:6px auto;font-size:20px;
-  animation: shine 1.5s infinite alternate;
-}
-@keyframes shine {
-  0%{ transform: scale(1) rotate(0deg); box-shadow:0 0 4px #ffd700; }
-  50%{ transform: scale(1.1) rotate(10deg); box-shadow:0 0 12px #ffd700; }
-  100%{ transform: scale(1) rotate(-5deg); box-shadow:0 0 6px #ffd700; }
-}
-
-.photo{ width:110px;height:110px;border-radius:50%;overflow:hidden;margin:10px auto;border:3px solid var(--accent);background:#f6fbff }
-.photo img{ width:100%;height:100%;object-fit:cover;display:block }
-.photo-upload{ display:block;margin:8px auto; }
-.name{ text-align:center;font-weight:700;margin-top:6px }
-.meta{ text-align:center;color:#0a3b45;font-weight:600;margin-top:6px }
-.btns{ display:flex;gap:8px;justify-content:center;margin-top:10px;flex-wrap:wrap }
-.btn{ padding:9px 12px;border-radius:10px;border:none;cursor:pointer;font-weight:700 }
-.btn-png{ background:var(--gold); color:#000 }
-.btn-pdf{ background:var(--accent);color:#fff }
-.btn-print{ background:#10b981;color:#032 }
-.controls{ display:flex;gap:8px;align-items:center;justify-content:center;margin:14px 0 }
-.small{ font-size:13px;color:#445; }
-footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
-
-.reset-btn{ background:#ef4444;color:#fff;padding:8px 12px;border-radius:8px;border:none }
-
-/* Preview Modal */
-#previewModal{
-  position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);display:none;align-items:center;justify-content:center;z-index:9999;
-}
+.card{background:#fff;border-radius:14px;padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);border:2px solid rgba(255,215,0,0.25);position:relative;}
+.medal{width:56px;height:56px;border-radius:50%;background:#ffd700;display:flex;align-items:center;justify-content:center;font-weight:900;color:#000;margin:6px auto;font-size:20px;}
+.photo{width:110px;height:110px;border-radius:50%;overflow:hidden;margin:10px auto;border:3px solid #0d6efd;background:#f6fbff;}
+.photo img{width:100%;height:100%;object-fit:cover;display:block;}
+.photo-upload{display:block;margin:8px auto;}
+.name{text-align:center;font-weight:700;margin-top:6px;}
+.meta{text-align:center;color:#0a3b45;font-weight:600;margin-top:6px;}
+.btns{display:flex;gap:8px;justify-content:center;margin-top:10px;flex-wrap:wrap;}
+.btn{padding:9px 12px;border-radius:10px;border:none;cursor:pointer;font-weight:700;}
+.btn-png{background:#ffd700;color:#000;}
+.btn-pdf{background:#0d6efd;color:#fff;}
+.btn-print{background:#10b981;color:#032;}
+footer{text-align:center;color:#345;margin-top:18px;font-size:14px;}
+#previewModal{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);display:none;align-items:center;justify-content:center;z-index:9999;}
 #previewModal img{max-width:90%;max-height:90%;border-radius:12px;box-shadow:0 8px 25px rgba(0,0,0,0.4);}
 #previewModal .close{position:absolute;top:20px;right:30px;font-size:28px;color:#fff;cursor:pointer;font-weight:700;}
 
-/* Download animation */
-#downloadAnim{
-  position:fixed;width:60px;height:60px;z-index:10000;
-  pointer-events:none;
-  background: url('https://cdn-icons-png.flaticon.com/512/1828/1828817.png') no-repeat center/contain;
+/* Download icon animation */
+#downloadIcon{
+  position:fixed; width:40px; height:40px; font-size:40px; color:#0d6efd; z-index:9999; pointer-events:none;
+  transform: translate(0,0); transition: transform 1s ease-in-out, opacity 1s ease;
+  opacity:0;
 }
 </style>
 </head>
 <body>
+
 <div class="wrap">
   <header>
     <h1>NOORUSSALAM MADRASA</h1>
     <p class="small">Annual Examination — Class Topper • Upload photo & generate certificate</p>
   </header>
 
-  <div class="controls">
-    <button class="reset-btn" id="resetAll">Reset All Saved Photos</button>
-  </div>
-
-  <div id="grid" class="grid" aria-live="polite"></div>
-
+  <div id="grid" class="grid"></div>
   <footer>© Noorussalam Madrasa — Auto-date added to certificate</footer>
 </div>
 
-<!-- Preview Modal -->
+<!-- Modal -->
 <div id="previewModal">
   <span class="close" onclick="closePreview()">×</span>
   <img id="previewImage" src="">
@@ -106,12 +64,12 @@ footer{ text-align:center;color:#345;margin-top:18px;font-size:14px }
 
 <!-- Sound -->
 <audio id="certSound" src="https://www.soundjay.com/buttons/sounds/button-3.mp3" preload="auto"></audio>
-<div id="downloadAnim"></div>
+
+<!-- Download flying icon -->
+<i id="downloadIcon" class="fa fa-download"></i>
 
 <script>
 const CERT_BG = "https://i.ibb.co/dwRcjKZP/TOPPER.jpg";
-const SIG_SRC  = ;
-
 const toppers = [
   { class: "1", name: "Ayesha Rahman", mark: "498 / 500" },
   { class: "2", name: "Muhammed Shahid", mark: "493 / 500" },
@@ -149,9 +107,9 @@ toppers.forEach((t,i)=>{
     <div class="name">${escapeHtml(t.name)}</div>
     <div class="meta">Class ${escapeHtml(t.class)} • ${escapeHtml(t.mark)}</div>
     <div class="btns">
-      <button class="btn btn-png" onclick="previewCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','png',${i})"><i class="fa fa-file-image"></i> PNG</button>
-      <button class="btn btn-pdf" onclick="previewCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','pdf',${i})"><i class="fa fa-file-pdf"></i> PDF</button>
-      <button class="btn btn-print" onclick="previewCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','print',${i})"><i class="fa fa-print"></i> Print</button>
+      <button class="btn btn-png" onclick="generateCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','png')">PNG</button>
+      <button class="btn btn-pdf" onclick="generateCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','pdf')">PDF</button>
+      <button class="btn btn-print" onclick="generateCertificate('${t.name}','${t.class}','${t.mark}', uploadedPhotos[${i}]||'${photoURL}','print')">Print</button>
     </div>
   `;
   grid.appendChild(card);
@@ -168,105 +126,66 @@ function handlePhotoUpload(input,index){
   reader.readAsDataURL(file);
 }
 
-document.getElementById('resetAll').onclick=()=>{
-  if(!confirm("Clear all photos?")) return;
-  for(let i=0;i<toppers.length;i++){
-    localStorage.removeItem(`topperPhoto_${i}`);
-    uploadedPhotos[i]=null;
-  }
-  location.reload();
-};
-
 function loadImage(src){ return new Promise((res,rej)=>{ const img=new Image(); img.crossOrigin="anonymous"; img.onload=()=>res(img); img.onerror=()=>rej(); img.src=src; }); }
 
-async function renderCertificateCanvas(name,cls,mark,photo,index){
-  const w=1125,h=1500,canvas=document.createElement("canvas");
-  canvas.width=w; canvas.height=h;
+async function renderCertificateCanvas(name,cls,mark,photo){
+  const w=1125,h=1500;
+  const canvas=document.createElement("canvas"); canvas.width=w; canvas.height=h;
   const ctx=canvas.getContext("2d");
-
-  const bg=await loadImage(CERT_BG);
-  ctx.drawImage(bg,0,0,w,h);
+  const bg=await loadImage(CERT_BG); ctx.drawImage(bg,0,0,w,h);
 
   const cx=w/2, cy=h/2, r=210;
-
-  ctx.beginPath(); ctx.arc(cx,cy,r*1.1,0,2*Math.PI);
-  ctx.fillStyle="rgba(255,223,0,0.2)"; ctx.fill();
+  ctx.beginPath(); ctx.arc(cx,cy,r*1.1,0,2*Math.PI); ctx.fillStyle="rgba(255,223,0,0.2)"; ctx.fill();
 
   if(photo){
     const img=await loadImage(photo);
-    const temp=document.createElement("canvas");
-    temp.width=r*2; temp.height=r*2;
+    const temp=document.createElement("canvas"); temp.width=r*2; temp.height=r*2;
     const tctx=temp.getContext("2d");
     const scale=Math.max(temp.width/img.width,temp.height/img.height);
     tctx.drawImage(img,(temp.width-img.width*scale)/2,(temp.height-img.height*scale)/2,img.width*scale,img.height*scale);
-    ctx.save();
-    ctx.beginPath(); ctx.arc(cx,cy,r,0,2*Math.PI); ctx.clip();
-    ctx.drawImage(temp,cx-r,cy-r);
-    ctx.restore();
+    ctx.save(); ctx.beginPath(); ctx.arc(cx,cy,r,0,2*Math.PI); ctx.clip();
+    ctx.drawImage(temp,cx-r,cy-r); ctx.restore();
   }
 
-  const medalRadius=28;
-  const angle=(Date.now()%3600)/10;
-  ctx.save();
-  ctx.translate(cx, cy-r-40);
-  ctx.rotate((angle*Math.PI)/180);
-  const gradient = ctx.createRadialGradient(0,0,medalRadius*0.3,0,0,medalRadius);
-  gradient.addColorStop(0,"#fff"); gradient.addColorStop(0.5,"#ffd700"); gradient.addColorStop(1,"#ffb700");
-  ctx.fillStyle=gradient;
-  ctx.beginPath(); ctx.arc(0,0,medalRadius,0,2*Math.PI); ctx.fill();
-  ctx.fillStyle="#000"; ctx.font="bold 28px sans-serif"; ctx.textAlign="center"; ctx.textBaseline="middle";
-  ctx.fillText(`${index+1}`,0,0);
-  ctx.restore();
+  ctx.beginPath(); ctx.arc(cx, cy-r-40,28,0,2*Math.PI); ctx.fillStyle="#ffd700"; ctx.fill();
+  ctx.fillStyle="#000"; ctx.font="bold 28px sans-serif"; ctx.textAlign="center"; ctx.fillText("1", cx, cy-r-35);
 
   ctx.beginPath(); ctx.arc(cx,cy,r+12,0,2*Math.PI); ctx.strokeStyle="#ffd700"; ctx.lineWidth=18; ctx.stroke();
 
-  ctx.fillStyle="#073045"; ctx.textAlign="center";
-  ctx.font="bold 60px sans-serif"; ctx.fillText(name,cx,cy+r+80);
+  ctx.fillStyle="#073045"; ctx.textAlign="center"; ctx.font="bold 60px sans-serif"; ctx.fillText(name,cx,cy+r+80);
   ctx.font="32px sans-serif"; ctx.fillText(`Class: ${cls} | Marks: ${mark}`,cx,cy+r+140);
 
   const d=new Date(); ctx.textAlign="left"; ctx.font="26px sans-serif";
   ctx.fillText(d.toLocaleDateString("en-IN",{day:"numeric",month:"long",year:"numeric"}),80,h-140);
 
-  if(SIG_SRC){
-    const sig=await loadImage(SIG_SRC); const sw=380; const sh=sig.height*(sw/sig.width);
-    ctx.drawImage(sig,w-100-sw,h-260-sh,sw,sh);
-  }
-
   return canvas;
 }
 
-// Download animation
-function animateDownload(btn){
-  const anim=document.getElementById("downloadAnim");
-  const rect=btn.getBoundingClientRect();
-  anim.style.left=rect.left+"px"; anim.style.top=rect.top+"px";
-  anim.style.display="block";
-  anim.animate([{transform:"translate(0,0) scale(1) rotate(0deg)", opacity:1},
-                {transform:"translate(80vw,-80vh) scale(0.2) rotate(720deg)", opacity:0}], 
-               {duration:1000, easing:"ease-in-out"});
-  setTimeout(()=>{anim.style.display="none";},1000);
-}
+async function generateCertificate(name,cls,mark,photo,type){
+  const sound = document.getElementById("certSound"); sound.currentTime=0; sound.play();
+  const canvas = await renderCertificateCanvas(name,cls,mark,photo);
+  const img = canvas.toDataURL("image/png");
 
-// Preview + Download/Print + Sound + Animation
-async function previewCertificate(name,cls,mark,photo,type,index){
-  document.getElementById("certSound").play();
-  animateDownload(event.currentTarget);
+  // Flying icon animation
+  const icon = document.getElementById("downloadIcon");
+  icon.style.opacity = 1;
+  icon.style.transform = `translate(${Math.random()*300-150}px, -400px)`;
+  setTimeout(()=>{ icon.style.opacity=0; icon.style.transform="translate(0,0)"; },1000);
 
-  const c=await renderCertificateCanvas(name,cls,mark,photo,index);
-  const img=c.toDataURL("image/png");
-  const modal=document.getElementById("previewModal");
-  const previewImg=document.getElementById("previewImage");
-  previewImg.src=img; modal.style.display="flex";
+  confetti({particleCount:100, spread:70, origin:{y:0.6}});
 
-  previewImg.onclick=()=>{
-    if(type==="png"){ const a=document.createElement("a"); a.href=img; a.download=`${name.replace(/\s+/g,'_')}.png`; a.click(); confetti(); }
-    else if(type==="pdf"){ const { jsPDF } = window.jspdf; const pdf=new jsPDF({orientation:"portrait",unit:"px",format:[1125,1500]}); pdf.addImage(img,"PNG",0,0,1125,1500); pdf.save(`${name.replace(/\s+/g,'_')}.pdf`); confetti(); }
-    else if(type==="print"){ const w=window.open(""); w.document.write(`<img src="${img}" style="width:100%">`); w.document.close(); setTimeout(()=>w.print(),500); confetti(); }
+  if(type==="png"){
+    const a=document.createElement("a"); a.href=img; a.download=`${name.replace(/\s+/g,'_')}.png`; a.click();
+  } else if(type==="pdf"){
+    const { jsPDF } = window.jspdf; 
+    const pdf=new jsPDF({orientation:"portrait",unit:"px",format:[1125,1500]});
+    pdf.addImage(img,"PNG",0,0,1125,1500); pdf.save(`${name.replace(/\s+/g,'_')}.pdf`);
+  } else if(type==="print"){
+    const w=window.open(""); w.document.write(`<img src="${img}" style="width:100%">`); w.document.close(); setTimeout(()=>w.print(),500);
   }
 }
 
-function closePreview(){ document.getElementById("previewModal").style.display="none"; }
-
+function closePreview(){ document.getElementById('previewModal').style.display="none"; }
 </script>
 </body>
 </html>
