--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,145 @@
     </div>
   </div>
 </section>
+  
+  <!-- PRINCIPAL MESSAGE SECTION -->
+<section class="principal-section py-5">
+  <div class="container">
+
+    <!-- Quran Verse -->
+    <div class="text-center mb-4">
+      <h5 class="quran-text">
+        ﴿ رَبِّ زِدْنِي عِلْمًا ﴾  
+      </h5>
+      <p class="quran-translation">"My Lord, increase me in knowledge." (Qur'an 20:114)</p>
+    </div>
+
+    <div class="row align-items-center g-4 principal-box">
+
+      <!-- Principal Photo -->
+      <div class="col-md-4 text-center">
+        <img src="principal.jpg" alt="Principal"
+          class="img-fluid rounded-circle shadow-sm principal-photo">
+      </div>
+
+      <!-- Principal Message -->
+      <div class="col-md-8">
+        <h2 class="section-title mb-3">Swadar Muallim’s Message</h2>
+
+        <p class="principal-text">
+          Assalamu Alaikum Warahmatullahi Wabarakatuh.
+          <br><br>
+          Noorussalam Madrasa continues to lead with excellence in Islamic
+          education, moral values, and spiritual development. Our goal is to
+          nurture students who are academically strong, spiritually grounded, and
+          socially responsible.
+          <br><br>
+          With Allah’s grace and the support of our teachers and parents, we
+          strive to build a bright future for every learner who steps into our
+          institution.
+        </p>
+
+        <!-- Signature Section -->
+        <div class="signature-box mt-4">
+          <img src="signature.png" alt="Signature" class="signature animated-signature">
+          <p class="mb-0"><strong>Swadar</strong></p>
+          <small>Swadar Muallim — Noorussalam Madrasa</small>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<style>
+/* Gradient Background */
+.principal-section {
+  background: linear-gradient(135deg, #e6f1ff, #cfe7ff);
+}
+
+/* Quran Verse */
+.quran-text {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #0b5ed7;
+  font-family: "Scheherazade New", serif;
+}
+.quran-translation {
+  font-size: 0.95rem;
+  color: #333;
+}
+
+/* Blue Border Box */
+.principal-box {
+  border: 3px solid #0b5ed7;
+  border-radius: 20px;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+}
+
+/* Heading */
+.section-title {
+  font-weight: 700;
+  color: #0b5ed7;
+  font-size: 1.8rem;
+}
+
+/* Principal Photo */
+.principal-photo {
+  width: 230px;
+  height: 230px;
+  object-fit: cover;
+  border: 8px solid #ffffff;
+  animation: float 4s ease-in-out infinite;
+}
+
+/* Message */
+.principal-text {
+  font-size: 1rem;
+  line-height: 1.7;
+  color: #333;
+}
+
+/* Signature Animation */
+.signature {
+  width: 170px;
+  opacity: 0;
+}
+
+/* Smooth fade + draw effect */
+.animated-signature {
+  animation: signatureDraw 2.7s ease forwards;
+}
+
+@keyframes signatureDraw {
+  0% { opacity: 0; filter: blur(6px); transform: translateY(8px); }
+  60% { opacity: 1; filter: blur(0); transform: translateY(0); }
+  100% { opacity: 1; }
+}
+
+/* Floating photo effect */
+@keyframes float {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-8px); }
+  100% { transform: translateY(0); }
+}
+
+/* Responsive Fixes */
+@media (max-width: 576px) {
+  .principal-photo {
+    width: 180px;
+    height: 180px;
+  }
+  .section-title {
+    font-size: 1.5rem;
+  }
+  .quran-text {
+    font-size: 1.6rem;
+  }
+}
+</style>
+
 <!-- HIGHLIGHTS SECTION -->
 <section id="highlights" class="py-5 bg-light">
   <div class="container">
@@ -1383,6 +1522,7 @@
 
 </body>
 </html>
+
 
 
 
