--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
     <!-- Quran Verse -->
     <div class="text-center mb-4">
       <h5 class="quran-text">
-        ﴿ رَبِّ زِدْنِي عِلْمًا ﴾  
+         ﴾رَبِّ زِدْنِي عِلْمًا﴿   
       </h5>
       <p class="quran-translation">"My Lord, increase me in knowledge." (Qur'an 20:114)</p>
     </div>
@@ -1103,7 +1103,7 @@
 
         <!-- Signature Section -->
         <div class="signature-box mt-4">
-          <img src="signature.png" alt="Signature" class="signature animated-signature">
+          <img src="https://i.ibb.co/Pv428hz9/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png" alt="Signature" class="signature animated-signature">
           <p class="mb-0"><strong>Swadar</strong></p>
           <small>Swadar Muallim — Noorussalam Madrasa</small>
         </div>
@@ -1522,6 +1522,7 @@
 
 </body>
 </html>
+
 
 
 
