--- a/result.html
+++ b/result.html
@@ -176,6 +176,10 @@
     <a href="coming-soon.html" class="btn btn-success">
       <i class="fa-solid fa-graduation-cap"></i> Toppers
     </a>
+
+    <a href="classtopper.html" class="btn btn-success">
+      <i class="fa-solid fa-graduation-cap"></i> Class Toppers
+    </a>
     
     
 
@@ -188,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
